@@ -5,6 +5,7 @@ import org.springframework.hateoas.RepresentationModel;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -16,11 +17,14 @@ public class UserDto extends RepresentationModel<UserDto> implements UserDetails
     private Long id;
     private String login;
     private String password;
+    private String name;
+    private String surname;
+    private String email;
     private RoleDto roleDto;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(roleDto);
+        return Arrays.asList(roleDto);
     }
 
     @Override
